SM-19 A_2 Routing zu Endpunkten

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,1 +1,13 @@
-<p>mainmenu works!</p>
+<div>
+  <Button routerLink="/test" type="button" class="btn">Gruppe erstellen</Button>
+  <p class="span4 text-left">oder</p>
+  <Button type="button" id="1">Import</Button>
+</div>
+<div>
+<Button type="button" id="2">Raum erstellen</Button>
+  <p>oder</p>
+  <Button type="button" id="3">Import</Button>
+</div>
+<div><nav>
+<Button type="button" id="4" disabled >Sitzordnung erstellen</Button>
+</nav></div>
