SM-19 A_2 Routing zu Endpunkten,Test entfernt

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,5 +1,5 @@
 <div>
-  <Button routerLink="/test" type="button" class="btn">Gruppe erstellen</Button>
+  <Button routerLink="/mainmenu" type="button" class="btn">Gruppe erstellen</Button>
   <p class="span4 text-left">oder</p>
   <Button type="button" id="1">Import</Button>
 </div>
