SM-69 Routing vervollständigt + Wild-Routing Komponente plus Routing implementiert SM-76 Styling und Menü überarbeitet, Fixes von Fehlern

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,13 +1,9 @@
-<div>
-  <Button routerLink="/mainmenu" type="button" class="btn">Gruppe erstellen</Button>
-  <p class="span4 text-left">oder</p>
-  <Button type="button" id="1">Import</Button>
+<div class="container pt-5">
+  <div class="container text-center">
+    <button type="button" routerLink="/group-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Gruppe erstellen</button> oder <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Importieren</button>
+    <br>
+    <button type="button" routerLink="/room-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Raum erstellen</button> oder <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Importieren</button>
+    <br>
+    <button type="button" routerLink="/generate" disabled class="btn btn-secondary mb-3 btn-lg btn-block">Sitzordnung erstellen</button>
+  </div>
 </div>
-<div>
-<Button type="button" id="2">Raum erstellen</Button>
-  <p>oder</p>
-  <Button type="button" id="3">Import</Button>
-</div>
-<div><nav>
-<Button type="button" id="4" disabled >Sitzordnung erstellen</Button>
-</nav></div>
