--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div class="container pt-5">
+  <div class="h-100 p-5 bg-light border rounded-3 text-center">
+    <div class="container-fluid py-5">
+      <h1 class="display-5 fw-bold">{{title}}</h1>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
