--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,12 +1,10 @@
-
-
-  <div class="SliderContainer">
-    <h5 style="margin-top: 18%">Wie viel Personen sind in der Sitzordnung</h5>
-    <ng5-slider class="slider"  [(value)]="value" [options]="options"></ng5-slider>
-    <input class="personCount" [(ngModel)]="value">
-    <button class="nextButton" (click)="toGruppe()">Weiter</button>
-    <button class="backButton" >Zurück</button>
-  </div>
+<div class="SliderContainer">
+  <h5 style="margin-top: 18%">Wie viel Personen sind in der Sitzordnung</h5>
+  <ngx-slider class="slider"  [(value)]="value" [options]="options"></ngx-slider>
+  <input class="personCount" [(ngModel)]="value">
+  <button class="nextButton" (click)="toGruppe()">Weiter</button>
+  <button class="backButton" routerLink="/mainmenu">Zurück</button>
+</div>
 
 
 
