SM-76 Styling und Menü überarbeitet

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,9 +1,9 @@
-<div class="container pt-5">
-  <div class="container text-center">
-    <button type="button" routerLink="/group-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Gruppe erstellen</button> oder <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Importieren</button>
+<div class="container h-100 mt-3 bg-light border rounded-3 text-center">
+  <div class="col text-center mt-5 mb-5">
+    <button type="button" routerLink="/group-slider" class="btn btn-primary mb-3 btn-lg btn-block">Gruppe erstellen</button> oder <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
     <br>
-    <button type="button" routerLink="/room-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Raum erstellen</button> oder <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-lg btn-block">Importieren</button>
+    <button type="button" routerLink="/room-slider" class="btn btn-primary mb-3 btn-lg btn-block">Raum erstellen</button> oder <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
     <br>
-    <button type="button" routerLink="/generate" disabled class="btn btn-secondary mb-3 btn-lg btn-block">Sitzordnung erstellen</button>
+    <button type="button" routerLink="/generate" disabled class="btn btn-primary mb-3 btn-lg btn-block">Sitzordnung erstellen</button>
   </div>
 </div>
