--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -5,7 +5,7 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 204px;
+  margin-top: 2em;
   max-width: 440px;
   width: calc(100% - 40px);
   background-color: white;
