--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,9 +1,9 @@
 <div class="SliderContainer">
-  <h5 style="margin-top: 18%">Wie viel Personen sind in der Sitzordnung</h5>
+  <h5 style="margin-top: 18%">Anzahl von Personen in der Sitzordnung</h5>
   <ngx-slider class="slider"  [(value)]="value" [options]="options"></ngx-slider>
   <input class="personCount" [(ngModel)]="value">
-  <button class="nextButton" (click)="toGruppe()">Weiter</button>
-  <button class="backButton" routerLink="/mainmenu">Zurück</button>
+  <button class="nextButton btn-primary" (click)="toGruppe()">Weiter</button>
+  <button class="backButton btn-primary" routerLink="/mainmenu">Zurück</button>
 </div>
 
 
