--- a/src/app/group-table/group-table.component.html
+++ b/src/app/group-table/group-table.component.html
@@ -1,32 +1,99 @@
 <div class="container text-center mt-4">
-  <table class="table table-striped table-bordered table-sm row-border hover" id="datatableexample">
-    <thead>
+  <table class="table table-striped table-hover">
+    <thead  class="table-dark">
     <tr>
       <th>Nr</th>
       <th>Vorname</th>
       <th>Nachname</th>
-      <th>Löschen</th>
+      <th *ngIf="this.TheStatus">Löschen</th>
     </tr>
     </thead>
     <tbody>
 
-    <tr *ngFor="let group of listOfContacts;  let i = index">
+    <tr *ngFor="let group of listOfContacts;  let i = index" (click)=" !this.TheStatus? openModal(i+1,group.Vorname,group.Nachname):''">
       <td>{{i+1}}</td>
-      <td (click)="deleteValue(i, $event)" (keyup)="changeValue(i, 'Vorname', $event)" (blur)="updateList(i, 'Vorname', $event)" contenteditable="true"><span style="outline: none" >{{group.Vorname}}</span></td>
-      <td (click)="deleteValue(i, $event)" (keyup)="changeValue(i, 'Nachname', $event)" (blur)="updateList(i, 'Nachname', $event)" contenteditable="true"><span style="outline: none" >{{group.Nachname}}</span></td>
-      <td ><svg (click)="delete(i)" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+      <td (click)=" this.TheStatus? deleteValue(i, $event):''" (keyup)="changeValue(i, 'Vorname', $event)" (blur)="updateList(i, 'Vorname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" [contentEditable]="this.TheStatus" style="text-align: center"><span style="outline: none;text-align: center" >{{group.Vorname}}</span ></td>
+      <td (click)="deleteValue(i, $event)" (keyup)="changeValue(i, 'Nachname', $event)" (blur)="updateList(i, 'Nachname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" [contentEditable]="this.TheStatus"><span style="outline: none" >{{group.Nachname}}</span></td>
+      <td *ngIf="this.TheStatus"><svg (click)="delete(i)" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
         <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
       </svg></td>
 
 
     </tr>
-    <td colspan="4" style="border-bottom: none">   <svg  style="cursor: pointer; float: right" (click)="addField()" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+
+    <td *ngIf="this.TheStatus" colspan="4" style="border-bottom: none">   <svg  style="cursor: pointer; float: right" (click)="addField()" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
       <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
       <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
     </svg></td>
     </tbody>
   </table>
-  <button class="nextButton" >Weiter</button>
-  <button class="backButton" (click)="toSlider()">Zurück</button>
+  <button  type="button" class="btn btn-outline-dark" style="float: right" (click)="confirmList()" [ngStyle]="{'display':this.TheStatus ? 'block' : 'none' }">Weiter</button>
+  <button  type="button" class="btn btn-outline-dark" style="float: right" (click)="saveList()" [ngStyle]="{'display':!this.TheStatus ? 'block' : 'none' }" >Bestätigen</button>
+  <button  type="button" class="btn btn-outline-dark" style="float: left" (click)="toSlider()">Zurück</button>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class="row">
+            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Nr</div>
+            <div class="col p-1" style="text-align: center">{{index}}</div>
+            <div class="w-100"></div>
+            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Vor- und Nachname</div>
+            <div class="col p-1" style="text-align: center">{{firstName}} {{lastName}}</div>
+            <div class="w-100"></div>
+            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Eigenschften</div>
+          </div>
+          <div class="row">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="besideWindow">
+              <label class="form-check-label" for="besideWindow">
+                Fensternähe
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="besideDoor" >
+              <label class="form-check-label" for="besideDoor">
+                Türnähe
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="besideBoard" >
+              <label class="form-check-label" for="besideBoard">
+                Tafelnähe
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="inFront" >
+              <label class="form-check-label" for="inFront">
+                Frontal
+              </label>
+            </div>
+
+            <label class="form-check-label" >
+              darf nicht neben
+            </label>
+          </div>
+        </div>
+      </div>
+      <div  class="modal-footer">
+        <button  type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Schließen</button>
+        <button type="button" class="btn btn-outline-dark" (click)="saveProperties()">Speichern</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
