--- a/src/app/group-table/group-table.component.html
+++ b/src/app/group-table/group-table.component.html
@@ -52,7 +52,7 @@
             <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Vor- und Nachname</div>
             <div class="col p-1" style="text-align: center">{{firstName}} {{lastName}}</div>
             <div class="w-100"></div>
-            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Eigenschften</div>
+            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Eigenschaften</div>
           </div>
           <div class="row">
             <div class="form-check">
