SM-76 "Raum erstellen" und entsprechender "Importieren" Button vorerst deaktiviert

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -9,8 +9,8 @@
     <div class="w-100"></div>
     <div class="col">
       <div class="col-sm-3 btn-group">
-        <button type="button" routerLink="/room-slider" class="w-75 btn btn-primary mb-3 btn-lg btn-block" [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : 'light-blue' }">Raum erstellen</button>
-        <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
+        <button type="button" routerLink="/room-slider" disabled class="w-75 btn btn-primary mb-3 btn-lg btn-block" [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : 'light-blue' }">Raum erstellen</button>
+        <button type="button" routerLinkActive="" disabled class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
       </div>
     </div>
     <div class="w-100"></div>
