Session/Gruppe_bearbeiten/slider

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -2,20 +2,20 @@
   <div class="row text-center mt-5 mb-5">
     <div class="col">
       <div class="col-sm-3 btn-group">
-        <button type="button" routerLink="/group-slider" class="w-75 btn btn-primary mb-3 btn-lg btn-block" [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : 'light-blue' }">Gruppe erstellen</button>
+        <button type="button" routerLink="/group-slider" class="w-75 btn btn-primary mb-3 btn-lg btn-block"  [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : '#609FFC' }">Gruppe erstellen</button>
         <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
       </div>
     </div>
     <div class="w-100"></div>
     <div class="col">
       <div class="col-sm-3 btn-group">
-        <button type="button" routerLink="/room-slider" disabled class="w-75 btn btn-primary mb-3 btn-lg btn-block" [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : 'light-blue' }">Raum erstellen</button>
+        <button type="button" routerLink="/room-slider" disabled class="w-75 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
         <button type="button" routerLinkActive="" disabled class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
       </div>
     </div>
     <div class="w-100"></div>
     <div class="col">
-      <button type="button" routerLink="/generate" disabled class="col-sm-3 btn btn-primary mb-3 btn-lg btn-block" [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : 'light-blue' }">Sitzordnung erstellen</button>
+      <button type="button" routerLink="/generate" disabled class="col-sm-3 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
     </div>
   </div>
 </div>
