--- a/src/app/group-table/group-table.component.css
+++ b/src/app/group-table/group-table.component.css
@@ -27,3 +27,8 @@
   width: 50%;
   vertical-align:middle;
 }
+.containerProperties {
+  border:2px solid #ccc;
+  width:300px; height: 100px;
+  overflow-y: scroll;
+}
