--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -8,3 +8,23 @@
 
 
 
+<!-- Modal -->
+<div class="modal fade" id="InfoMessage" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="InfoMessageTitle">Achtung !</h5>
+        <button (click)="closeInfoMessageModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Sie werden Ihre aktuelle Daten verloren!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="confirmModalText()">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
