--- a/src/app/export-csv/export-csv.component.css
+++ b/src/app/export-csv/export-csv.component.css
@@ -11,3 +11,11 @@ input::-webkit-inner-spin-button {
 input.example-right-align {
   -moz-appearance: textfield;
 }
+.myBody{
+  background-color: red;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
