--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -2,10 +2,17 @@
   <div class="row text-center mt-5 mb-5">
     <div class="col">
       <div class="col-sm-3 btn-group">
-        <button type="button" routerLink="/group-slider" class="w-75 btn btn-primary mb-3 btn-lg btn-block"  [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : '#609FFC' }">Gruppe erstellen</button>
+        <button type="button" (click)="editOrCreatGruppe()" class="w-75 btn btn-primary mb-3 btn-lg btn-block"  [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : '#609FFC' }">{{gruppeStatus}}</button>
         <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
+        <svg (click)="removeGruppe()" [ngStyle]="{'display':this.isDataExcist() ? 'initial' : 'none'}"  style="cursor: pointer; margin: 9px" xmlns="http://www.w3.org/2000/svg" width="40" height="35" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+        </svg>
       </div>
-    </div>
+
+
+
+
     <div class="w-100"></div>
     <div class="col">
       <div class="col-sm-3 btn-group">
