--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -14,16 +14,17 @@
 
 
     <div class="w-100"></div>
-    <div class="col">
-      <div class="col-sm-3 btn-group">
-        <button type="button" routerLink="/room-slider" disabled class="w-75 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
-        <button type="button" routerLinkActive="" disabled class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
+      <div class="col">
+        <div class="col-sm-3 btn-group">
+          <button type="button" routerLink="/room" class="w-75 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
+          <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
+        </div>
       </div>
-    </div>
     <div class="w-100"></div>
     <div class="col">
       <button type="button" routerLink="/generate" disabled class="col-sm-3 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
     </div>
   </div>
+</div>
 </div>
 
