SM-16 AusnahmeVonNachbarn(SM-81, SM-82, SM-83, SM-84, SM-85, SM-86, SM-87)

--- a/src/app/group-table/group-table.component.html
+++ b/src/app/group-table/group-table.component.html
@@ -18,11 +18,11 @@
       </td>
 
       <td >
-        <input   (blur)="updateList(i, 'Vorname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" placeholder="Vorname eintragen" value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none" [readOnly]="!this.TheStatus" />
+        <input autocomplete="Firstname" (blur)="updateList(i, 'Vorname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" placeholder="Vorname eintragen" value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none" [readOnly]="!this.TheStatus" />
       </td>
 
       <td>
-        <input   (blur)="updateList(i, 'Nachname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" placeholder="Nachname eintragen" value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none" [readOnly]="!this.TheStatus" />
+        <input autocomplete="Lastname" (blur)="updateList(i, 'Nachname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" placeholder="Nachname eintragen" value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none" [readOnly]="!this.TheStatus" />
         <svg [ngStyle]="{'display':this.TheStatus ? 'none' : 'initial' }" style="float: right; position: absolute; margin: 5px -29px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
           <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
           <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
@@ -122,8 +122,8 @@
               darf nicht neben
               <div class="container containerProperties" style="float: right">
                 <div *ngFor="let group of neighborList;  let i = index" class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="checkbox{{i}}" >
-                  <label  class="form-check-label" for="checkbox{{i}}">
+                  <input class="form-check-input" type="checkbox" value="" id="checkbox{{firstName}}{{lastName}}{{i}}" >
+                  <label  class="form-check-label" for="checkbox{{firstName}}{{lastName}}{{i}}">
                     {{group.Vorname}} {{group.Nachname}}
                   </label>
                 </div>
