--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -2,7 +2,7 @@
   <div class="row text-center mt-5 mb-5">
     <div class="col">
       <div class="col-sm-3 btn-group">
-        <button type="button" (click)="editOrCreatGruppe()" class="w-75 btn btn-primary mb-3 btn-lg btn-block"  [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : '#609FFC' }">{{gruppeStatus}}</button>
+        <button type="button" (click)="editOrCreatGruppe()" class="w-75 btn btn-secondary mb-3 btn-lg btn-block"  [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : '#0B5ED7' }">{{gruppeStatus}}</button>
         <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
         <svg (click)="removeGruppe()" [ngStyle]="{'display':this.isDataExcist() ? 'initial' : 'none'}"  style="cursor: pointer; margin: 9px" xmlns="http://www.w3.org/2000/svg" width="40" height="35" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
           <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
