SM-150 Bestätigung für Löschen von Personenliste

--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -26,3 +26,25 @@
 </div>
 </div>
 <app-import-csv></app-import-csv>
+
+
+<!-- Modal -->
+<div class="modal fade" id="InfoMessage" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="InfoMessageTitle">Achtung !</h5>
+        <button (click)="closeInfoMessageModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Möchten Sie Ihre aktuelle Daten löschen ?
+      </div>
+      <div class="modal-footer" style="justify-content: center;">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeInfoMessageModal()">Nein</button>
+        <button type="button" class="btn btn-outline-dark" (click)="confirmModalText()">Ja</button>
+      </div>
+    </div>
+  </div>
+</div>
