--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,37 +1,93 @@
-<div id="popupContainer" *ngIf="isPopup">
-  <div id="popupForm">
-
-    <div id="headerPopup">
-      Bitte bestätigen Sie die Löschung!
+<div id="popupContainer" >
+  <div *ngIf="isToDelete" class="popupForm">
+    <div class="headerPopup">
+      Bestätigung der Löschung
     </div>
-    <div id="contentPopup">
+    <div class="contentPopup">
       Wollen Sie diesen Element endgültig löschen ?<br>
       <br>
     </div>
-    <div id="popUpActions">
-      <button (click)="isPopup = false">Nein</button>
-      <button (click)="deleteDesk(); isPopup = false">Ja</button>
+    <div class="popUpActions">
+      <button (click)="isToDelete = false">Nein</button>
+      <button (click)="deleteDesk(); isToDelete = false">Ja</button>
+    </div>
+  </div>
+  <div *ngIf="isToAdd" class="popupForm">
+
+    <div class="headerPopup">
+      Neuer Schreibtisch gestalten
+    </div>
+    <div class="contentPopup">
+      <div id="right">
+        <label class="">Type</label><br>
+        <select name="desktyp" id="desktyp" [(ngModel)]="deskToAdd.desktyp">
+          <option value="eckig">Eckig</option>
+          <option value="dreieckig">Dreieckig</option>
+          <option value="rund">Rund</option>
+        </select>
+        <br>
+        <label class="">Plätze</label><br>
+        <select name="place" id="place" [(ngModel)]="deskToAdd.place">
+          <option value="1">1</option>
+          <option value="2">2</option>
+        </select>
+      </div>
+
+      <div id="left">
+        <label class="">X</label><br>
+        <input type="number" min="0" max="{{widthStage}}" [(ngModel)]="deskToAdd.x">
+        <br>
+        <label class="">Y</label><br>
+        <input type="number" min="0" max="{{heightStage}}" [(ngModel)]="deskToAdd.y">
+        <br>
+        <label class="">Rotation</label><br>
+        <input type="number" [(ngModel)]="deskToAdd.degRotation">
+      </div>
+
+    </div>
+    <div class="popUpActions">
+      <button (click)="isToAdd = false">Abbrechen</button>
+      <button (click)="addDesk(deskToAdd.desktyp,deskToAdd.place,deskToAdd.x,deskToAdd.y,deskToAdd.degRotation); isToAdd = false">Hinzufügen</button>
     </div>
 
   </div>
 </div>
+
 <div id="container">
   <div id="toolbar">
+
     <div class="left-container-child" >
       <div><label class="label-left-dark label-left-title">Raumfläche</label></div>
+
       <div class="horizontal-left-side-element">
         <div class="horizontal-width">
           <div><label class="label-left-dark">Länge</label></div>
-          <input type="number" min="{{minimumWidth}}" max="{{maximumWidth}}" value="{{ standardRooms[0].width }}" [(ngModel)]="standardRooms[0].width"  name="scene-width" (change)="updateVisualisation(standardRooms[0].width,standardRooms[0].height)">
+          <input type="number" min="{{minWidth}}" max="{{maxWidth}}" [(ngModel)]="standardRooms[0].width" (change)="updateVisualisation(standardRooms[0].width,standardRooms[0].height)">
         </div>
+
+        <div class="horizontal-width" id="linkedicon">
+          <span class="material-icons" *ngIf="islinked" (click)="islinked = false;">link</span>
+          <span class="material-icons" *ngIf="!islinked" (click)="islinked = true;">link_off</span>
+        </div>
+
         <div class="horizontal-width">
           <div><label class="label-left-dark">Breite</label></div>
-          <input type="number" min="{{minimumHeight}}" max="{{maximumHeight}}" value="{{ standardRooms[0].height }}" name="scene-height" [(ngModel)]="standardRooms[0].height" (change)="updateVisualisation(standardRooms[0].width,standardRooms[0].height)">
+          <input type="number" min="{{minHeight}}" max="{{maxHeight}}" [(ngModel)]="standardRooms[0].height" (change)="updateVisualisation(standardRooms[0].width,standardRooms[0].height)">
         </div>
+
+        <div class="horizontal-width">
+          <div><label class="label-left-dark">Einheit</label></div>
+          <select (change)="changeUnit()" name="unit" class="selectelement" [(ngModel)]="selectedUnit">
+            <option *ngFor="let unit of units">{{unit}}</option>
+          </select>
+        </div>
+
       </div>
+
     </div>
 
     <div class="left-container-child" >
+
       <div><label class="label-left-dark label-left-title">Schreibtische</label></div>
       <div class="horizontal-left-side-element" *ngFor="let desk of roomDesks" style="height: 100px;">
         <div class="horizontal-width">
@@ -44,41 +100,30 @@
         </div>
         <div class="horizontal-width">
           <div><label class="label-left-dark">X</label></div>
-          <input type="number" value="{{desk.x}}" id="elx{{desk.id}}" (change)="updateDesks(desk.id)" [ngModel]="desk.x"   style="color: #999; font-family: 'Segoe UI';">
+          <input type="number" value="{{desk.x}}" id="elx{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.x"   style="color: #999; font-family: 'Segoe UI';">
         </div>
         <div class="horizontal-width">
           <div><label class="label-left-dark">Y</label></div>
-          <input type="number" value="{{desk.y}}" id="ely{{desk.id}}" (change)="updateDesks(desk.id)" [ngModel]="desk.y"   style="color: #999; font-family: 'Segoe UI';">
+          <input type="number" value="{{desk.y}}" id="ely{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.y"   style="color: #999; font-family: 'Segoe UI';">
         </div>
         <div class="horizontal-width">
           <div><label class="label-left-dark">Rotation</label></div>
           <input type="number" value="{{desk.degRotation}}" id="elr{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.degRotation"  style="color: #999; font-family: 'Segoe UI';">
         </div>
         <div class="horizontal-width" style="line-height: 110px;">
-          <label (click)="isPopup = true; currentId = desk.id"><span class="material-icons">delete_sweep</span></label>
+          <label (click)="isToDelete = true; currentId = desk.id;"><span class="material-icons">delete_sweep</span></label>
         </div>
       </div>
       <div style="width: 100%; height: 50px;">
-        <label style="float: right"><span class="material-icons">add</span></label>
+        <label (click)="isToAdd = true;" style="float: right"><span class="material-icons">add</span></label>
       </div>
     </div>
-
-
-
-    <div class="left-container-child" >
-      <div><label class="label-left-dark label-left-title">Türen</label></div>
-
-    </div>
-
-    <div class="left-container-child" >
-      <div><label class="label-left-dark label-left-title">Fenster</label></div>
-
-    </div>
   </div>
-
-
-
   <div id="visualiser">
+    <div id="workspaceHeader">
+      <span (click)="savePdf()" class="material-icons p-3">picture_as_pdf</span>
+      <span class="material-icons p-3">restart_alt</span>
+    </div>
     <div id="roomvisualiser"></div>
   </div>
 </div>
