--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -1,29 +1,18 @@
 <div class="container h-100 mt-3 bg-light border rounded-3 text-center">
-  <div class="row text-center mt-5 mb-5">
-    <div class="col">
-      <div class="col-sm-3 btn-group">
-        <button type="button" (click)="editOrCreatGruppe()" class="w-75 btn btn-secondary mb-3 btn-lg btn-block"  [ngStyle]="{'background-color':this.isDataExcist() ? 'green' : '#0B5ED7' }">{{gruppeStatus}}</button>
-        <span (click)="ImportBox()" class="material-icons md-48" title="Import">file_open</span>
-
-        <span (click)="removeGruppe()" [ngStyle]="{'display':this.isDataExcist() ? 'initial' : 'none'}" class="material-symbols-outlined md-48" style="margin-top: 2.5px" title="Delete">delete</span>
-      </div>
-
-
-
-
-    <div class="w-100"></div>
-      <div class="col">
-        <div class="col-sm-3 btn-group">
-          <button type="button" routerLink="/room" class="w-75 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
-          <button type="button" routerLinkActive="/room-slider" class="btn btn-secondary mb-3 btn-sm btn-block">Importieren</button>
-        </div>
-      </div>
-    <div class="w-100"></div>
-    <div class="col">
-      <button type="button" routerLink="/generate" disabled class="col-sm-3 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
+  <div class="d-grid gap-2 justify-content-center mt-3">
+    <div class="btn-group">
+      <button type="button" (click)="editOrCreatGroup()" class="w-75 btn mb-3 btn-lg btn-block" [ngClass]="{'btn-success':this.isDataExist(), 'btn-primary': !this.isDataExist()}">{{gruppeStatus}}</button>
+      <button type="button" (click)="ImportBox()" class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'rounded-end':!this.isDataExist()}" title="Import">file_open</button>
+      <button type="button" (click)="removeGruppe()" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isDataExist()}" title="Delete">delete</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" routerLink="/room" class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
+      <button type="button" disabled class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" (click)="ImportBox()" title="Import">file_open</button>
+    </div>
+    <div class="btn-group">
+      <button type="button" routerLink="/generate" disabled class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
     </div>
   </div>
-</div>
 </div>
 <app-import-csv></app-import-csv>
 
