--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -62,7 +62,7 @@
       <div class="horizontal-left-side-element">
         <div class="horizontal-width">
           <div><label class="label-left-dark">Länge</label></div>
-          <input type="number" min="{{minWidth}}" max="{{maxWidth}}" [(ngModel)]="standardRooms[0].width" (change)="updateVisualisation(standardRooms[0].width,standardRooms[0].height)">
+          <input type="number" min="{{minWidth}}" max="{{maxWidth}}" [(ngModel)]="standardRooms[currentRoomId].width" (change)="updateVisualisation(standardRooms[currentRoomId].width,standardRooms[currentRoomId].height)">
         </div>
 
         <div class="horizontal-width" id="linkedicon">
@@ -72,7 +72,7 @@
 
         <div class="horizontal-width">
           <div><label class="label-left-dark">Breite</label></div>
-          <input type="number" min="{{minHeight}}" max="{{maxHeight}}" [(ngModel)]="standardRooms[0].height" (change)="updateVisualisation(standardRooms[0].width,standardRooms[0].height)">
+          <input type="number" min="{{minHeight}}" max="{{maxHeight}}" [(ngModel)]="standardRooms[currentRoomId].height" (change)="updateVisualisation(standardRooms[currentRoomId].width,standardRooms[currentRoomId].height)">
         </div>
 
         <div class="horizontal-width">
@@ -89,40 +89,54 @@
     <div class="left-container-child" >
 
       <div><label class="label-left-dark label-left-title">Schreibtische</label></div>
-      <div class="horizontal-left-side-element" *ngFor="let desk of roomDesks" style="height: 100px;">
-        <div class="horizontal-width">
-          <div><label class="label-left-dark">Typ</label></div>
-          <label  style="color: #999; font-family: 'Segoe UI';">{{desk.desktyp}}</label>
-        </div>
-        <div class="horizontal-width">
-          <div><label class="label-left-dark">Plätze</label></div>
-          <label  style="color: #999; font-family: 'Segoe UI';">{{desk.place}}</label>
-        </div>
-        <div class="horizontal-width">
-          <div><label class="label-left-dark">X</label></div>
-          <input type="number" value="{{desk.x}}" id="elx{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.x"   style="color: #999; font-family: 'Segoe UI';">
-        </div>
-        <div class="horizontal-width">
-          <div><label class="label-left-dark">Y</label></div>
-          <input type="number" value="{{desk.y}}" id="ely{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.y"   style="color: #999; font-family: 'Segoe UI';">
-        </div>
-        <div class="horizontal-width">
-          <div><label class="label-left-dark">Rotation</label></div>
-          <input type="number" value="{{desk.degRotation}}" id="elr{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.degRotation"  style="color: #999; font-family: 'Segoe UI';">
-        </div>
-        <div class="horizontal-width" style="line-height: 110px;">
-          <label (click)="isToDelete = true; currentId = desk.id;"><span class="material-icons">delete_sweep</span></label>
+
+      <div  *ngFor="let desk of roomDesks">
+        <div class="horizontal-left-side-element" *ngIf="desk.roomId === currentRoomId" style="height: 80px;">
+          <div class="horizontal-width">
+            <div><label class="label-left-dark">Typ</label></div>
+            <label  style="color: #999; font-family: 'Segoe UI';">{{desk.desktyp}}</label>
+          </div>
+          <div class="horizontal-width">
+            <div><label class="label-left-dark">Plätze</label></div>
+            <label  style="color: #999; font-family: 'Segoe UI';">{{desk.place}}</label>
+          </div>
+          <div class="horizontal-width">
+            <div><label class="label-left-dark">X</label></div>
+            <input type="number" value="{{desk.x}}" id="elx{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.x"   style="color: #999; font-family: 'Segoe UI';">
+          </div>
+          <div class="horizontal-width">
+            <div><label class="label-left-dark">Y</label></div>
+            <input type="number" value="{{desk.y}}" id="ely{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.y"   style="color: #999; font-family: 'Segoe UI';">
+          </div>
+          <div class="horizontal-width">
+            <div><label class="label-left-dark">Rotation</label></div>
+            <input type="number" value="{{desk.degRotation}}" id="elr{{desk.id}}" (change)="updateDesks(desk.id)" [(ngModel)]="desk.degRotation"  style="color: #999; font-family: 'Segoe UI';">
+          </div>
+          <div class="horizontal-width" style="line-height: 110px;">
+            <label (click)="isToDelete = true; currentId = desk.id;"><span class="material-icons">delete_sweep</span></label>
+          </div>
         </div>
       </div>
+
       <div style="width: 100%; height: 50px;">
         <label (click)="isToAdd = true;" style="float: right"><span class="material-icons">add</span></label>
       </div>
+
+
     </div>
+
   </div>
   <div id="visualiser">
     <div id="workspaceHeader">
-      <span (click)="savePdf()" class="material-icons p-3">picture_as_pdf</span>
-      <span class="material-icons p-3">restart_alt</span>
+      <div id="headerRight">
+        <button class="btn" (click)="currentRoomId = 0; updateVisualisation(standardRooms[currentRoomId].width,standardRooms[currentRoomId].height)">Unterricht</button>
+        <button class="btn" (click)="currentRoomId = 1; updateVisualisation(standardRooms[currentRoomId].width,standardRooms[currentRoomId].height)">Konferenz</button>
+        <button class="btn" (click)="currentRoomId = 2; updateVisualisation(standardRooms[currentRoomId].width,standardRooms[currentRoomId].height)">Workshop</button>
+      </div>
+      <div id="headerLeft">
+        <span (click)="savePdf()" class="material-icons p-3">picture_as_pdf</span>
+        <span class="material-icons p-3">restart_alt</span>
+      </div>
     </div>
     <div id="roomvisualiser"></div>
   </div>
